Add set methods, update docs and other several changes